# FLOPs-Information-Criterion

./: .gitignore  README.md  concept.ipynb  setup.cfg  setup.py
examples/: basic_usage.py  blas_demo.ipynb  demo.ipynb  demo.py  fic_refining.ipynb  fic_refining.py  fic_usage.ipynb  fic_usage.py  high_level_usage.ipynb  high_level_usage.py
flop_counter/: __init__.py  cpp_interface.py  flop_counter.py  flop_information_criterion.py  model_profiler.py
include/: estimators.hpp  flop_counter.hpp
include/flopscope/: estimators.hpp
python/flopscope/: __init__.py  api.py  blas.probe.py
src/: bindings.cpp  flop_counter.cpp
tests/: mnist_test.ipynb  mnist_test.py  numpy.py  pytorch.py  test_flop_counter.py
