[metadata]
name = flopscope
version = 0.1.0
description = C++ FLOPs estimators with Python bindings
author = You
license = MIT

[options]
zip_safe = False
packages = find:
include_package_data = True

[options.package_data]
flopscope = ["py.typed"]

[options.extras_require]
dev = 
    pytest
    numpy
